whitespace fixes

--- a/src/hnsapi/old/site90/directorylist.css
+++ b/src/hnsapi/old/site90/directorylist.css
@@ -1,205 +1,199 @@
 body { 
-	background-color: #E6E6E6;
+background-color:#e6e6e6;
 }
 
 h1 {
-	color: #6699FF;
-	font-family: Arial, Helvetica, sans-serif;
-	font-weight:bold;
-	font-size: medium;
-	margin: 0 0 10px 8px;
-	padding:0;
+color:#6699ff;
+font-family:Arial, Helvetica, sans-serif;
+font-weight:bold;
+font-size:medium;
+margin:0 0 10px 8px;
+padding:0;
 }
 
 img {
-	border: 0;
+border:0;
 }
 
 form {
-	margin: 0;
-	padding: 0;
+margin:0;
+padding:0;
 }
 
 #container {
-	width: 600px;
-	margin-left:auto;
-	margin-right:auto;
-	border: 1px solid #CCCCCC;
-	padding: 9px;
-	background-color:#FFFFFF;
-	
+width:600px;
+margin-left:auto;
+margin-right:auto;
+border:1px solid #ccc;
+padding:9px;
+background-color:#fff;
 }
 
 #breadcrumbs {
-	color: #6699FF;
-	font-family: Arial, Helvetica, sans-serif;
-	font-size:small;
-	margin: 0 0 8px 8px;
+color:#6699FF;
+font-family:Arial, Helvetica, sans-serif;
+font-size:small;
+margin:0 0 8px 8px;
 }
 
 #breadcrumbs a, #breadcrumbs a:visited, #breadcrumbs a:link, #breadcrumbs a:active {
-	color: #6699FF;
-	text-decoration:none;
+color:#6699ff;
+text-decoration:none;
 }
 
 #breadcrumbs a:hover {
-	text-decoration:underline;
+text-decoration:underline;
 }
 
 #listingcontainer {
-	background-image:url(bg.gif);
-	padding: 10px;
-	background-color:#E0DEDE;
+background-image:url(bg.gif);
+padding:10px;
+background-color:#e0dede;
 }
 
 #listingheader {
-	color: #476BB3;
-	font-weight:bold;
-	font-family:Arial, Helvetica, sans-serif;
-	font-size:small;
-	text-align:right;
+color:#476bb3;
+font-weight:bold;
+font-family:Arial, Helvetica, sans-serif;
+font-size:small;
+text-align:right;
 }
 
 #listingheader a, #listingheader a:active, #listingheader a:visited, #listingheader a:link {
-	text-decoration: none;
-	color: #476BB3;
+text-decoration:none;
+color:#476bb3;
 }
 
 #listingheader a:hover {
-	text-decoration: underline;
-	color: #476BB3;
+text-decoration:underline;
+color:#476bb3;
 }
 
-
 #headerfile {
-	text-align:left;
-	float: left;
-	width: 320px; 
+text-align:left;
+float:left;
+width:320px;
 }
 
 #headersize {
-	text-align:right;
-	width: 75px;
-	float: left;
+text-align:right;
+width:75px;
+float:left;
 }
 
 #listing {
-	border: 1px solid #A7C5FF;
+border:1px solid #a7c5ff;
 }
 
 #listing a {
-	display:block;
-	padding: 2px 5px 2px 5px;
-	font-size:small;
-	color: #6285CA;
-	font-family:Arial, Helvetica, sans-serif;
-	text-decoration:none;
-	width:568px;
-	text-align:right;
-	
+display:block;
+padding:2px 5px 2px 5px;
+font-size:small;
+color:#6285ca;
+font-family:Arial, Helvetica, sans-serif;
+text-decoration:none;
+width:568px;
+text-align:right;
 }
 
 #listing a:hover {
-	background-color:#DBE6FE;
+background-color:#dbe6fe;
 }
 
 #listing a img {
-	float:left;
-	margin-right: 4px;
+float:left;
+margin-right:4px;
 }
 
-
-
 #listing a strong {
-	width: 300px;
-	float:left;
-	cursor:hand;
-	cursor:pointer;
-	text-align:left;
+width:300px;
+float:left;
+cursor:hand;
+cursor:pointer;
+text-align:left;
 }
 
 #listing a em {
-	float: left;
-	width: 75px;
-	text-align:right;
-	cursor:hand;
-	cursor:pointer;
+float:left;
+width:75px;
+text-align:right;
+cursor:hand;
+cursor:pointer;
 }
 
 #listing a span {
-	position: absolute;
-	margin-left: -151px;
-	margin-top: -2px;
+position:absolute;
+margin-left:-151px;
+margin-top:-2px;
 }
 
 #listing a span img {
-	width: 150px;
-	background-color:#CCCCCC;
-	visibility: hidden;	
+width:150px;
+background-color:#ccc;
+visibility:hidden;
 }
 
 #listing a:hover span img {
-	border: 1px solid #666666;
-	visibility: visible;
+border:1px solid #666;
+visibility:visible;
 }
 
 #upload {
-	border: 1px solid #A7C5FF;
-	display:block;
-	margin-top: 10px;
-	font-size:small;
-	color: #6285CA;
-	font-family:Arial, Helvetica, sans-serif;
-	text-decoration:none;
-	width:568px;
-	background-color: #E9F0FF;
+border:1px solid #a7c5ff;
+display:block;
+margin-top:10px;
+font-size:small;
+color:#6285ca;
+font-family:Arial, Helvetica, sans-serif;
+text-decoration:none;
+width:568px;
+background-color:#e9f0ff;
 }
 
 #uploadtitle {
-	background-color: #DBE6FE;
-	padding: 2px 5px 2px 5px;
-	border-bottom: 1px solid #A7C5FF;
-	
+background-color:#dbe6fe;
+padding:2px 5px 2px 5px;
+border-bottom:1px solid #A7C5FF;
+
 }
 
 #uploadcontent {
-	padding: 2px 5px 2px 5px;
+padding:2px 5px 2px 5px;
 }
 
 
 #copy {
-	width: 600px;
-	margin-left:auto;
-	margin-right:auto;
-	text-align:center;
-	font-size:x-small;
-	color: #666666;
-	font-family:Arial, Helvetica, sans-serif;
+width:600px;
+margin-left:auto;
+margin-right:auto;
+text-align:center;
+font-size:x-small;
+color:#666;
+font-family:Arial, Helvetica, sans-serif;
 }
 
 #copy a {
-	text-decoration: underline;
-	color: #666666;
+text-decoration:underline;
+color:#666;
 }
 
 .b {
-	background-color: #E9F0FF;
-	
+background-color:#e9f0ff;
 }
 
 .w {
-	background-color:#FFFFFF;
+background-color:#fff;
 }
 
 .mod {
-	float:right;
+float:right;
 }
 
 .size {
-	float:right;
+float:right;
 }
 
 .style3 {
-	color: #FF0000;
-	font-weight: bold;
+color:#f00;
+font-weight:bold;
 }
